--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -4,40 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Game1">
+    tools:context=".question1">
 
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="20dp">
 
+
         <TextView
-            android:id="@+id/textResult"
-            android:layout_width="372dp"
-            android:layout_height="133dp"
+            android:id="@+id/textTitle"
+            android:layout_width="323dp"
+            android:layout_height="210dp"
             android:gravity="center"
-            android:text="GAME N°1"
-            android:textSize="30sp"></TextView>
+            android:text=""
+            android:textSize="30sp" ></TextView>
 
         <Button
-            android:id="@+id/choix1"
+            android:id="@+id/button1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="20dp"
-            android:text="Géographie"
+            android:text=""
             android:textSize="18sp" ></Button>
 
         <Button
-            android:id="@+id/choix2"
+            android:id="@+id/button2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="20dp"
-            android:text="Histoire"
+            android:text=""
+            android:textSize="18sp" ></Button>
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="20dp"
+            android:text=""
+            android:textSize="18sp" ></Button>
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="20dp"
+            android:text=""
             android:textSize="18sp" ></Button>
 
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
